[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Test1Manager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Backgrounds/mid.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/VendingMachine.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Coin.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Yorn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Bench.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Doors.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/CleaningLady.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3177.39, 100 )

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="middle" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="middle2" type="Sprite" parent="."]
position = Vector2( 1920, 0 )
texture = ExtResource( 2 )
centered = false

[node name="Platforms" type="Node2D" parent="."]
editor/display_folded = true

[node name="Layer 2" type="Node2D" parent="Platforms"]

[node name="Platform2" parent="Platforms/Layer 2" instance=ExtResource( 3 )]
position = Vector2( 600, 440 )
scale = Vector2( 0.6, 0.5 )

[node name="Platform5" parent="Platforms/Layer 2" instance=ExtResource( 3 )]
position = Vector2( 1450, 440 )
scale = Vector2( 0.2, 0.5 )

[node name="Platform3" parent="Platforms/Layer 2" instance=ExtResource( 3 )]
position = Vector2( 3000, 440 )

[node name="Layer 1" type="Node2D" parent="Platforms"]

[node name="Platform1" parent="Platforms/Layer 1" instance=ExtResource( 3 )]
position = Vector2( 250, 710 )
scale = Vector2( 0.35, 0.5 )

[node name="Platform3" parent="Platforms/Layer 1" instance=ExtResource( 3 )]
position = Vector2( 1200, 710 )
scale = Vector2( 0.35, 0.5 )

[node name="Platform2" parent="Platforms/Layer 1" instance=ExtResource( 3 )]
position = Vector2( 2100, 710 )
scale = Vector2( 0.3, 0.5 )

[node name="Ceiling" type="StaticBody2D" parent="Platforms"]
position = Vector2( 960, 139.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Ceiling"]
shape = SubResource( 1 )

[node name="Floor" type="StaticBody2D" parent="Platforms"]
position = Vector2( 960, 141 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Floor"]
position = Vector2( -9.82228, 958.486 )
shape = SubResource( 1 )

[node name="VendingMachine" parent="." instance=ExtResource( 4 )]
position = Vector2( 3512.03, 289.447 )
scale = Vector2( 0.2, 0.2 )

[node name="VendingMachine2" parent="." instance=ExtResource( 4 )]
position = Vector2( 614.103, 288.459 )
scale = Vector2( 0.2, 0.2 )

[node name="GoldCoin" parent="." instance=ExtResource( 5 )]
position = Vector2( 400, 400 )

[node name="GoldCoin2" parent="." instance=ExtResource( 5 )]
position = Vector2( 3080.42, 400 )

[node name="SilverCoin" parent="." instance=ExtResource( 5 )]
position = Vector2( 2000, 600 )

[node name="SilverCoin2" parent="." instance=ExtResource( 5 )]
position = Vector2( 451.995, 670 )

[node name="BronzeCoin" parent="." instance=ExtResource( 5 )]
position = Vector2( 1903.15, 929.798 )

[node name="BronzeCoin2" parent="." instance=ExtResource( 5 )]
position = Vector2( 2220, 670 )

[node name="Obstacles" type="Node2D" parent="."]

[node name="Yorn" parent="Obstacles" instance=ExtResource( 6 )]
position = Vector2( 850, 364 )

[node name="Bench" parent="Obstacles" instance=ExtResource( 7 )]
position = Vector2( 1900, 669.835 )
scale = Vector2( 1.5, 1.5 )

[node name="Doors2" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 1723.27, 889.667 )

[node name="Doors" parent="Obstacles" instance=ExtResource( 8 )]
position = Vector2( 334.203, 641.695 )
scale = Vector2( 0.8, 0.8 )

[node name="CleaningLady" parent="Obstacles" instance=ExtResource( 9 )]
position = Vector2( 2866.14, 427.394 )

